# gpu-task

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  build.sh
.devcontainer/: Dockerfile
examples/: device_info.cpp  scalar_multiply.cpp  vector_add.cpp
include/: gpu_buffer.h  gpu_context.h  gpu_kernel.h  gputask.h
include/webgpu_compute/: buffer_manager.h  compute_effects_store.h  compute_engine.h  device_manager.h  webgpu_compute.h
samples/: CMakeLists.txt
samples/01-vector-add/: CMakeLists.txt  main.cpp  vec-add.wglsl
src/: CMakeLists.txt  buffer_manager.cpp  compute_engine.cpp  device_manager.cpp  gpu_buffer.cpp  gpu_context.cpp  gpu_kernel.cpp
test/: CMakeLists.txt  test_buffer_manager.cpp  test_device_manager.cpp
